k3s/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strava-basic-auth
spec:
  basicAuth:
    secret: strava-basic-auth
