k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: strava
spec:
  selector:
    app: strava
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
