k3s/strava-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  name: strava-webhook
spec:
  selector:
    app: strava-webhook
  ports:
    - port: 8001
      targetPort: 8001
      protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strava-webhook
  namespace: strava
spec:
  replicas: 1
  selector:
    matchLabels:
      app: strava-webhook
  template:
    metadata:
      labels:
        app: strava-webhook
    spec:
      serviceAccountName: strava-webhook
      containers:
        - name: webhook
          image: kyxie/strava-webhook:v1.0.4 # {"$imagepolicy": "flux-system:strava-webhook-policy"}
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
